<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RegisterPatient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/screen_bg"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20sdp"

            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_8sdp"
                app:cardMaxElevation="@dimen/_10sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_85sdp"
                        android:layout_height="@dimen/_85sdp"
                        app:civ_border_color="@color/text_color1"
                        app:civ_border_width="@dimen/_1sdp"
                        android:src="@drawable/place_holder"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/profile_pic"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_usernamelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/edit_text_shape"
                        android:baselineAligned="true"
                        android:textColorHint="@color/hint_color"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:backgroundTint="#ECECEC"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/raleway_medium"
                            android:hint="@string/username"
                            android:inputType="textPersonName"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingTop="@dimen/_11sdp"
                            android:paddingEnd="@dimen/_11sdp"
                            android:paddingBottom="@dimen/_11sdp"
                            android:selectAllOnFocus="true"
                            android:textColor="@color/text_color1"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/_11ssp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_emaillayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:baselineAligned="true"
                        android:textColorHint="@color/hint_color"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:backgroundTint="#ECECEC"
                            android:drawableEnd="@drawable/ic_mail"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/raleway_medium"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingTop="@dimen/_11sdp"
                            android:paddingEnd="@dimen/_11sdp"
                            android:paddingBottom="@dimen/_11sdp"
                            android:selectAllOnFocus="true"
                            android:textColor="@color/text_color1"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/_11ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/edit_passwordlayout"
                            android:layout_width="0dp"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:background="@drawable/edit_text_shape"
                            android:baselineAligned="true"
                            android:textColorHint="@color/hint_color"
                            app:hintEnabled="false"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edit_emaillayout"
                            app:passwordToggleContentDescription="@string/login_password"
                            app:passwordToggleDrawable="@drawable/asl_password_visibility"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="#ECECEC">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:backgroundTint="#ECECEC"
                                android:drawablePadding="@dimen/_10sdp"
                                android:fontFamily="@font/raleway_medium"
                                android:hint="@string/login_password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingTop="@dimen/_5sdp"
                                android:paddingEnd="@dimen/_11sdp"
                                android:paddingBottom="@dimen/_5sdp"
                                android:selectAllOnFocus="true"
                                android:textColor="@color/text_color1"
                                android:textColorHint="@color/hint_color"
                                android:textSize="@dimen/_11ssp" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/edit_cpasswordlayout"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:background="@drawable/edit_text_shape"
                            android:baselineAligned="true"
                            android:textColorHint="@color/hint_color"
                            app:hintEnabled="false"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edit_emaillayout"
                            app:passwordToggleContentDescription="@string/login_password"
                            app:passwordToggleDrawable="@drawable/asl_password_visibility"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="#ECECEC">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_cpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:backgroundTint="#ECECEC"
                                android:drawablePadding="@dimen/_10sdp"
                                android:fontFamily="@font/raleway_medium"
                                android:hint="@string/login_cpassword"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingTop="@dimen/_5sdp"
                                android:paddingEnd="@dimen/_11sdp"
                                android:paddingBottom="@dimen/_5sdp"
                                android:selectAllOnFocus="true"
                                android:textColor="@color/text_color1"
                                android:textColorHint="@color/hint_color"
                                android:textSize="@dimen/_11ssp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_phonelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:baselineAligned="true"
                        android:textColorHint="@color/hint_color"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:backgroundTint="#ECECEC"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/raleway_medium"
                            android:hint="@string/phone_hint"
                            android:inputType="number"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingTop="@dimen/_11sdp"
                            android:paddingEnd="@dimen/_11sdp"
                            android:paddingBottom="@dimen/_11sdp"
                            android:selectAllOnFocus="true"
                            android:textColor="@color/text_color1"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/_11ssp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_addresslayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:baselineAligned="true"
                        android:textColorHint="@color/hint_color"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:backgroundTint="#ECECEC"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/raleway_medium"
                            android:hint="@string/address"
                            android:inputType="textPostalAddress"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingTop="@dimen/_11sdp"
                            android:paddingEnd="@dimen/_11sdp"
                            android:paddingBottom="@dimen/_11sdp"
                            android:selectAllOnFocus="true"
                            android:textColor="@color/text_color1"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/_11ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_28sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/button_bg"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="Register"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center">

                <TextView
                    android:id="@+id/experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:autoLink="web"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/already_have_account"
                    android:textColor="@color/text_color2"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/text_logindescs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_toEndOf="@id/experience"
                    android:autoLink="web"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/login_now"
                    android:textColor="@color/text_color3"
                    android:textSize="@dimen/_10ssp" />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>